--- a/src/lojadino/CadastroFuncionarios.form
+++ b/src/lojadino/CadastroFuncionarios.form
@@ -316,6 +316,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="txtcpf">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="   .   .   -  "/>
+          </Properties>
         </Component>
       </SubComponents>
     </Container>
