--- a/src/lojadino/ConsultaFuncionarios.form
+++ b/src/lojadino/ConsultaFuncionarios.form
@@ -492,6 +492,7 @@
             <Component class="javax.swing.JTextField" name="jTextField1">
               <Properties>
                 <Property name="text" type="java.lang.String" value="   .   .   -  "/>
+                <Property name="toolTipText" type="java.lang.String" value=""/>
               </Properties>
             </Component>
             <Component class="javax.swing.JButton" name="jButton1">
