--- a/src/lojadino/TelaPrincipal.form
+++ b/src/lojadino/TelaPrincipal.form
@@ -274,7 +274,7 @@
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
                   <Image iconType="3" name="/lojadino/Imagens/func24px.png"/>
                 </Property>
-                <Property name="toolTipText" type="java.lang.String" value="Dinossauros"/>
+                <Property name="toolTipText" type="java.lang.String" value="Funcion&#xe1;rios"/>
                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                   <Border info="org.netbeans.modules.form.compat2.border.LineBorderInfo">
                     <LineBorder/>
